force-app/main/default/objects/ContactType_Count__c/ContactType_Count__c.object-meta.xml
<CustomObject>
    <description>Holds the contact type counts for related accounts</description>
    <label>ContactType Count</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>ContactType Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContactType Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>