force-app/main/default/objects/ContactType_Count__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the related account id</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ContactType Counts</relationshipLabel>
    <relationshipName>ContactType_Counts</relationshipName>
    <type>Lookup</type>
</CustomField>