force-app/main/default/objects/ContactType_Count__c/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <description>Holds the count of the contacts with a specific type</description>
    <label>Contact Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>