force-app/main/default/objects/ContactType_Count__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Holds the state of the contact</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>