force-app/main/default/objects/ContactType_Count__c/validationRules/CON001_Cannot_Have_Greater_Than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>CON001_Cannot_Have_Greater_Than_5</fullName>
    <active>true</active>
    <description>Throw an error when the contact count is greater than 5</description>
    <errorConditionFormula>Contact_Count__c &gt; 5</errorConditionFormula>
    <errorMessage>Contact Count can not be greater than 5</errorMessage>
</ValidationRule>